[gd_scene load_steps=17 format=3 uid="uid://bpyqr2dwikw5q"]

[ext_resource type="Script" path="res://Sripts/player.gd" id="1_prbjj"]
[ext_resource type="Texture2D" uid="uid://dvi5x285ykovo" path="res://Art/StickyMan/idle/idle1.png" id="2_ttof3"]
[ext_resource type="Texture2D" uid="uid://h8ouq025khwp" path="res://Art/StickyMan/idle/idle2.png" id="3_bi12p"]
[ext_resource type="Texture2D" uid="uid://cqjoiksj3gjv8" path="res://Art/StickyMan/jump/salto1.png" id="4_fqqxo"]
[ext_resource type="Texture2D" uid="uid://c3yrqor1aixpy" path="res://Art/StickyMan/run/corsa1.png" id="5_88myp"]
[ext_resource type="Texture2D" uid="uid://pl4oyslpf7o7" path="res://Art/StickyMan/run/corsa2.png" id="6_vckcc"]
[ext_resource type="Texture2D" uid="uid://xac5hpu3fp6x" path="res://Art/StickyMan/run/corsa3.png" id="7_ypgio"]
[ext_resource type="Texture2D" uid="uid://b4sy3yac5wm7x" path="res://Art/Shadow.png" id="8_lnxx2"]
[ext_resource type="Script" path="res://Sripts/player_fall.gd" id="9_5eboo"]
[ext_resource type="AudioStream" uid="uid://cweal1iqrluop" path="res://Sounds/Footsteps125.wav" id="10_m44ro"]
[ext_resource type="AudioStream" uid="uid://dy07o1mawmp5p" path="res://Sounds/LandWood.wav" id="11_brq8o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gm1kr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ttof3")
}, {
"duration": 1.0,
"texture": ExtResource("3_bi12p")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_fqqxo")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_88myp")
}, {
"duration": 1.0,
"texture": ExtResource("6_vckcc")
}, {
"duration": 1.0,
"texture": ExtResource("7_ypgio")
}, {
"duration": 1.0,
"texture": ExtResource("6_vckcc")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="Gradient" id="Gradient_nr6w2"]
colors = PackedColorArray(1, 1, 1, 0.588235, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1vb77"]
gradient = SubResource("Gradient_nr6w2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6vay6"]
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
color = Color(0.509804, 1, 1, 1)
color_ramp = SubResource("GradientTexture1D_1vb77")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1d4dg"]
size = Vector2(7.5, 5.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_prbjj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gm1kr")
animation = &"idle"

[node name="TrailEffectTransform" type="RemoteTransform2D" parent="AnimatedSprite2D"]
remote_path = NodePath("../../TrailEffect")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.705882)
z_index = -1
position = Vector2(2.08165e-12, 7)
texture = ExtResource("8_lnxx2")

[node name="TrailEffect" type="GPUParticles2D" parent="."]
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_6vay6")
texture = ExtResource("2_ttof3")
lifetime = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.75)
shape = SubResource("RectangleShape2D_1d4dg")
disabled = true

[node name="FallDetection" type="StaticBody2D" parent="."]
script = ExtResource("9_5eboo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallDetection"]
position = Vector2(0, 5.75)
shape = SubResource("RectangleShape2D_1d4dg")

[node name="RemoteFallDetection" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../FallDetection")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PSpeedTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5.75)
shape = SubResource("RectangleShape2D_1d4dg")

[node name="Footsteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_m44ro")

[node name="Land" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_brq8o")

[node name="LandSoundTimer" type="Timer" parent="Land"]
wait_time = 0.1
one_shot = true

[connection signal="player_off_tilemap" from="FallDetection" to="." method="_on_fall_detection_player_off_tilemap"]
[connection signal="player_on_tilemap" from="FallDetection" to="." method="_on_fall_detection_player_on_tilemap"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
